spade-tests/src/snapshots/spade_tests__hir_lowering__tests__wal_trace_on_non_wal_suffix_is_error.snap
---
source: spade-tests/src/hir_lowering.rs
---
struct T { }
entity main(x: T) -> T {
    #[wal_trace]
    let y = x;
    x
}


error: #[wal_trace] on struct without #[wal_traceable]
  ┌─ testinput:3:5
  │
3 │     #[wal_trace]
  │     ^^^^^^^^^^^^ T does not have #[wal_traceable]
4 │     let y = x;
  │         - This has type T which does not have #[wal_traceable]
  │
  = note: This most likely means that the struct can not be analyzed by a wal script
