spade-tests/src/snapshots/spade_tests__hir_lowering__tests__wal_trace_with_extra_clk.snap
---
source: spade-tests/src/hir_lowering.rs
---
#[wal_traceable(suffix = wal_suffix__)]
struct Test {
    a: int<8>,
    b: int<4>
}

entity main(clk: clock, x: Test) -> Test {
    #[wal_trace(clk = clk)]
    let y = x;
    x
}


error: Unnecessary clock signal
  ┌─ testinput:8:23
  │
1 │ #[wal_traceable(suffix = wal_suffix__)]
  │ --------------------------------------- This struct does not need a clock signal for tracing
  ·
8 │     #[wal_trace(clk = clk)]
  │                       ^^^ Unnecessary clock signal
