spade-tests/src/snapshots/spade_tests__hir_lowering__tests__wal_trace_with_extra_reset.snap
---
source: spade-tests/src/hir_lowering.rs
---
#[wal_traceable(suffix = wal_suffix__)]
struct Test {
    a: int<8>,
    b: int<4>
}

entity main(x: Test) -> Test {
    #[wal_trace(rst = true)]
    let y = x;
    x
}


error: Unnecessary reset signal
  ┌─ testinput:8:23
  │
1 │ #[wal_traceable(suffix = wal_suffix__)]
  │ --------------------------------------- This struct does not need a reset signal for tracing
  ·
8 │     #[wal_trace(rst = true)]
  │                       ^^^^ Unnecessary reset signal
