spade-tests/src/snapshots/spade_tests__hir_lowering__tests__wal_trace_with_missing_clk_is_error.snap
---
source: spade-tests/src/hir_lowering.rs
---
#[wal_traceable(suffix = wal_suffix__, uses_clk)]
struct Test {
    a: int<8>,
    b: int<4>
}

entity main(x: Test) -> Test {
    #[wal_trace]
    let y = x;
    x
}


error: The clock signal for this trace must be provided
  ┌─ testinput:8:5
  │
8 │     #[wal_trace]
  │     ^^^^^^^^^^^^
